--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   </parent>
 
   <artifactId>appdynamics-dashboard</artifactId>
-  <version>1.0.13</version>
+  <version>1.0.14-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>AppDynamics Dashboard Plugin for Jenkins</name>
@@ -61,7 +61,7 @@
     <connection>scm:git:ssh://github.com/jenkinsci/appdynamics-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/appdynamics-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/appdynamics-plugin</url>
-    <tag>appdynamics-dashboard-1.0.13</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
