Additional logging and small code improvements

--- a/src/main/resources/nl/codecentric/jenkins/appd/AppDynamicsResultsPublisher/config.properties
+++ b/src/main/resources/nl/codecentric/jenkins/appd/AppDynamicsResultsPublisher/config.properties
@@ -19,7 +19,7 @@ appdynamics.connection.test.progress=Testing...
 appdynamics.threshold.metric.title=Threshold Metric
 appdynamics.threshold.metric.description=AppDynamics Metric that will be used to decide if thresholds are reached
 appdynamics.threshold.customMetricPath.title=Custom Metric Path
-appdynamics.threshold.customMetricPath.description=Custom Metric Path from AppDynamics Metric Browser
+appdynamics.threshold.customMetricPath.description=Custom Metric Path from AppDynamics Metric Browser, only active when "Custom metric path" is selected from the "Threshold Metric" drop-down list.
 appdynamics.threshold.lower.title=Lower is better
 appdynamics.minmeasuretime.title=Minimum Measure Time
 appdynamics.minmeasuretime.description=Minimum time-span in minutes for which statistics are fetched (default 10 min)
