--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.11</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>4.51</version><!-- which version of Jenkins is this plugin built against? -->
     <relativePath />
   </parent>
 
@@ -58,7 +58,7 @@
   </developers>
 
   <scm>
-    <connection>scm:git:ssh://github.com/jenkinsci/appdynamics-plugin.git</connection>
+    <connection>scm:git:https://github.com/jenkinsci/appdynamics-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/appdynamics-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/appdynamics-plugin</url>
     <tag>HEAD</tag>
@@ -66,9 +66,7 @@
 
   <properties>
     <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
-    <jenkins.version>1.625.3</jenkins.version>
-    <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
-    <java.level>7</java.level>
+    <jenkins.version>2.346.3</jenkins.version>
 
     <!-- http://docs.codehaus.org/display/MAVENUSER/POM+Element+for+Source+File+Encoding -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
